--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
           {
             "mainConfig": "./webpack.main.config.js",
             "renderer": {
+              "nodeIntegration": true,
               "config": "./webpack.renderer.config.js",
               "entryPoints": [
                 {
@@ -69,6 +70,8 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
@@ -84,6 +87,9 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "electron-store": "^8.0.1"
+    "electron-store": "^8.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-timer-hook": "^3.0.5"
   }
 }
