--- a/package.json
+++ b/package.json
@@ -81,9 +81,11 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-timer-hook": "^3.0.5"
   }
 }
