--- a/package.json
+++ b/package.json
@@ -73,9 +73,12 @@
     "css-loader": "^6.0.0",
     "electron": "15.2.0",
     "eslint": "^7.6.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-react": "^7.26.1",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "node-loader": "^2.0.0",
+    "prettier": "^2.4.1",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
     "typescript": "^4.0.2"
