--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.10",
+    "@types/wicg-file-system-access": "^2020.9.4",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
